PDF: Final fixes

--- a/PDF/template_settings/common/renames.tex
+++ b/PDF/template_settings/common/renames.tex
@@ -81,10 +81,10 @@
 %% Ключевых слов от 3 до 5 слов или словосочетаний в именительном падеже именительном падеже множественного числа (или в единственном числе, если нет другой формы) по правилам русского языка!!!
 %%
 %%
-\newcommand{\keywordsRu}{Стилевое оформление сайта, управление контентом, php, MySQL, архитектура системы} % ВВЕДИТЕ ключевые слова по-русски
+\newcommand{\keywordsRu}{ Легковесная криптография, криптографические алгоритмы, интернет вещей, C, сравнительный анализ, сравнительное тестирование } % ВВЕДИТЕ ключевые слова по-русски
 %%
 %%
-\newcommand{\keywordsEn}{Style registration, content management, php, MySQL, system architecture} % ВВЕДИТЕ ключевые слова по-английски
+\newcommand{\keywordsEn}{ Lightweight cryptography, cryptographic algorithms, IoT, C, comparative analysis, benchmarking } % ВВЕДИТЕ ключевые слова по-английски
 %%
 %%
 %% Реферат ОТ 1000 ДО 1500 знаков на русский или английский текст
@@ -96,10 +96,10 @@
 %- область применения результатов ВКР;
 %- выводы.
 
-\newcommand{\abstractRu}{В данной работе изложена сущность подхода к созданию динамического информационного портала на основе использования открытых технологий Apache, MySQL и PHP. Даны общие понятия и классификация IT-систем такого класса. Проведен анализ систем-прототипов. Изучена технология создания указанного класса информационных систем. Разработана конкретная программная реализация динамического информационного портала на примере портала выбранной тематики...} % ВВЕДИТЕ текст аннотации по-русски
+\newcommand{\abstractRu}{В данной работе рассматривается подход к сравнительному анализу легковесных криптографических алгоритмов применительно к устройствам интернета вещей. Выделяются возможные угрозы их безопасности, анализируются различные виды легковесных криптографических алгоритмов для защиты от них. Предлагается методология сравнительного тестирования производительности и мощности энергопотребления таких алгоритмов. Методология прошла апробацию в части тестирования производительности путем практической реализации тестирования трех различных реализаций алгоритма AES.} % ВВЕДИТЕ текст аннотации по-русски
 %%
 %%
-\newcommand{\abstractEn}{In the given work the essence of the approach to creation of a dynamic information portal on the basis of use of open technologies Apache, MySQL and PHP is stated. The general concepts and classification of IT-systems of such class are given. The analysis of systems-prototypes is lead. The technology of creation of the specified class of information systems is investigated. Concrete program realization of a dynamic information portal on an example of a portal of the chosen subjects is developed...} % ВВЕДИТЕ текст аннотации по-английски
+\newcommand{\abstractEn}{This paper considers an approach to the comparative analysis of lightweight cryptographic algorithms applied to the Internet of things devices. Possible threats to their security are identified, different types of lightweight cryptographic algorithms are analyzed to defend against threats. A methodology for performance and power consumption benchmarking of such algorithms is proposed. The methodology of performance benchmarking was verified through the practical implementation of testing three different implementations of the AES algorithm.} % ВВЕДИТЕ текст аннотации по-английски
 
 
 
