--- a/PDF/my_folder/acronyms.tex
+++ b/PDF/my_folder/acronyms.tex
@@ -7,10 +7,14 @@
 % Жирное начертание для математических символов может иметь
 % дополнительный смысл, поэтому они приводятся как в тексте
 % диссертации
-\textbf{DOI} & Digital Object Identifier. \\
-\textbf{WoS} & Web of Science. \\
-\textbf{ВКР}  & Выпускная квалификационная работа. \\
-\textbf{ТГ-объект}  & Текстово-графический объект. \\
+\textbf{ПК} & Персональный компьютер. \\
+\textbf{ЦП} & Центральный процессор. \\
+\textbf{CPU} & Центральный процессор. \\
+\textbf{ОЗУ} & Оперативное запоминающее устройство. \\
+\textbf{ОС} & Операционная система. \\
+\textbf{LW} & Легковесный. \\
+\textbf{LWC} & Lightweight cryptography (легковесная криптография). \\
+\textbf{ПДД} & Правила дорожного движения. \\
 %$\begin{rcases}
 %a_n\\
 %b_n
