PDF: Fix some normo mistakes

--- a/PDF/my_folder/chapter1.tex
+++ b/PDF/my_folder/chapter1.tex
@@ -11,7 +11,7 @@
 
 Человеческая цивилизация в течение всего времени существования работает с различной информацией. Информация может представлять собой как исторические сведения или описания технологических процессов, так и частные данные человека или группы лиц. Сведения, составляющие информацию и представляющие определенную ценность, должны быть защищены от лиц, не имеющих соответствующих прав доступа. Поэтому задача защиты информации всегда была актуальной. 
 
-Защитить информацию можно тремя способами \cite{src8}.
+Защитить информацию можно тремя способами~\cite{src8}.
 \begin{enumerate}
 	\item Создание абсолютно надежного и изолированного от доступа извне хранилища информации и инфраструктуры для него. Это является крайне трудоемкой и дорогостоящей задачей.
 	\item Скрытие факта существования или передачи информации. Средства и методы такого скрытия изучает стеганография.
@@ -20,39 +20,39 @@
 
 Формализуем вышесказанное.
 
-Информация – сведения, передаваемые одними людьми другим людям устным, письменным или каким-либо другим способом, а также сам процесс передачи или получения этих сведений \cite{src9}.
+Информация – сведения, передаваемые одними людьми другим людям устным, письменным или каким-либо другим способом, а также сам процесс передачи или получения этих сведений~\cite{src9}.
 
-Защита информации – деятельность, направленная на предотвращение утечки защищаемой информации, несанкционированных и непреднамеренных воздействий на защищаемую информацию \cite{src10}. Утечка – неконтролируемое распространение защищаемой информации в результате ее разглашения, несанкционированного доступа к информации и получения защищаемой информации иностранными разведками \cite{src11}.
+Защита информации – деятельность, направленная на предотвращение утечки защищаемой информации, несанкционированных и непреднамеренных воздействий на защищаемую информацию~\cite{src10}. Утечка – неконтролируемое распространение защищаемой информации в результате ее разглашения, несанкционированного доступа к информации и получения защищаемой информации иностранными разведками~\cite{src11}.
 
-Криптография -— инженерно-техническая дисциплина, изучающая математические методы защиты информации (шифры). Криптография включает в себя криптосинтез и криптоанализ. Криптосинтез изучает подходы к разработке шифров. Криптоанализ изучает подходы к вскрытию шифров \cite{src8}.
+Криптография -— инженерно-техническая дисциплина, изучающая математические методы защиты информации (шифры). Криптография включает в себя криптосинтез и криптоанализ. Криптосинтез изучает подходы к разработке шифров. Криптоанализ изучает подходы к вскрытию шифров~\cite{src8}.
 
 \subsection{Шифры: основные понятия и принципы} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
-Итак, шифр (криптографический алгоритм, шифрующая функция) – преобразование данных, обеспечивающее их защищённость (зашифрованность). Это преобразование вида f: x→y, где x – исходные, незашифрованные данные (представленные в виде целого числа), y – полученный зашифрованный текст (также целое число), f – шифрующая функция.
+Итак, шифр (криптографический алгоритм, шифрующая функция) – преобразование данных, обеспечивающее их защищённость (зашифрованность). Это преобразование вида $f:x\,\to\,y$, где $x$ – исходные, незашифрованные данные (представленные в виде целого числа), $y$ – полученный зашифрованный текст (также целое число), $f$ – шифрующая функция.
 
-Дешифрующая функция – функция, обратная к шифрующей: f\^(-1): y→x. Результатом применения дешифрующей функции к зашифрованным данным являются исходные данные.
+Дешифрующая функция – функция, обратная к шифрующей: $f^{-1}:y\,\to\,x$. Результатом применения дешифрующей функции к зашифрованным данным являются исходные данные.
 
-Для того, чтобы шифрование было эффективным, необходимо, чтобы шифрующая функция f была легко вычислимой, для затруднения дешифровки дешифрующая функция f\^(-1) должна быть достаточно сложна для вычисления \cite{src12}. Функции такого вида называются односторонними.
+Для того, чтобы шифрование было эффективным, необходимо, чтобы шифрующая функция $f$ была легко вычислимой, для затруднения дешифровки дешифрующая функция $f^{-1}$ должна быть достаточно сложна для вычисления~\cite{src12}. Функции такого вида называются односторонними.
 
-Функция f называется \textit{односторонней}, если выполняются условия \cite{src12}:
+Функция f называется \textit{односторонней}, если выполняются условия~\cite{src12}:
 \begin{enumerate}
-	\item для любого x из некоторого множества существует эффективный алгоритм вычисления y=f(x);
-	\item не существует эффективного алгоритма обращения функции f.
+	\item для любого x из некоторого множества существует эффективный алгоритм вычисления $y=f(x)$;
+	\item не существует эффективного алгоритма обращения функции $f$.
 \end{enumerate}  
 
 Однако шифр должен быть не только недоступным для взлома злоумышленником. Законный получатель должен иметь возможность эффективно получить исходные данные. Это требование формализуется как «функция с секретом» или «односторонняя функция с секретом».
 
-Функция f называется \textit{односторонней функцией с секретом}, если выполняются условия \cite{src12}:
+Функция $f$ называется \textit{односторонней функцией с секретом}, если выполняются условия~\cite{src12}:
 \begin{enumerate}
-	\item для любого x из некоторого множества существует эффективный алгоритм вычисления y=f(x);
-	\item функция f обладает «секретным свойством» k, таким что:.
+	\item для любого $x$ из некоторого множества существует эффективный алгоритм вычисления $y=f(x)$;
+	\item функция $f$ обладает «секретным свойством» $k$, таким что:.
 	\begin{enumerate}
-		\item при использовании свойства k можно построить эффективный алгоритм построения обратной функции f\^(-1);
-		\item если свойство k неизвестно, то не существует эффективного алгоритма обращения функции f.
+		\item при использовании свойства k можно построить эффективный алгоритм построения обратной функции $f^{-1}$;
+		\item если свойство $k$ неизвестно, то не существует эффективного алгоритма обращения функции $f$.
 	\end{enumerate}
 \end{enumerate}
 
-Итак, при использовании шифра на основе функции с секретом, шифровать (вычислять функцию f) могут все, а эффективно расшифровывать – только лица, которым известно секретное свойство k.
+Итак, при использовании шифра на основе функции с секретом, шифровать (вычислять функцию $f$) могут все, а эффективно расшифровывать – только лица, которым известно секретное свойство $k$.
 
 Секретное свойство также называют \textit{ключом шифра}. Он представляет собой число или набор чисел (параметров алгоритма).
 
@@ -64,22 +64,22 @@
 
 Однако если будет представлен алгоритм, эффективно решающий трудную задачу (т. е. задача перестанет быть трудной), шифры на ее основе мгновенно устареют. Поэтому поиск трудных задач (и, наоборот, поиски быстро решающих их алгоритмов) является одним из важных направлений криптографии.
 
-С другой стороны, в секрете хранится только ключ алгоритма, сам алгоритм должен быть открытым. То есть вся криптографическая стойкость алгоритма должна содержаться в ключе, а злоумышленник может знать о криптографической схеме все, кроме ключа. Это правило называется \textit{принципом Керкгоффса}. Его выполнение обеспечивает надежность системы: даже в случае подбора ключа (методом перебора или, например, шантажа) злоумышленником достаточно его сменить, и начинать взлом нужно с самого начала. Похожий принцип «враг знает систему» был (вероятно, независимо) сформулирован Шенноном и называется \textit{максимой Шеннона} \cite{src13}.
+С другой стороны, в секрете хранится только ключ алгоритма, сам алгоритм должен быть открытым. То есть вся криптографическая стойкость алгоритма должна содержаться в ключе, а злоумышленник может знать о криптографической схеме все, кроме ключа. Это правило называется \textit{принципом Керкгоффса}. Его выполнение обеспечивает надежность системы: даже в случае подбора ключа (методом перебора или, например, шантажа) злоумышленником достаточно его сменить, и начинать взлом нужно с самого начала. Похожий принцип «враг знает систему» был (вероятно, независимо) сформулирован Шенноном и называется \textit{максимой Шеннона}~\cite{src13}.
 
-Это, однако, является только рекомендацией. В правительственных, военных и ряде других областей применяется противоположный принцип: безопасность через неясность. Его суть состоит в скрытии внутренней структуры системы безопасности. Для шифров общего назначения он не рекомендуется, их, напротив, публикуют и обсуждают, чтобы коллективно найти уязвимости и возможности улучшения \cite{src14}.
+Это, однако, является только рекомендацией. В правительственных, военных и ряде других областей применяется противоположный принцип: безопасность через неясность. Его суть состоит в скрытии внутренней структуры системы безопасности. Для шифров общего назначения он не рекомендуется, их, напротив, публикуют и обсуждают, чтобы коллективно найти уязвимости и возможности улучшения~\cite{src14}.
 
 \subsection{Симметричная криптография} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
 Изначально существовали только симметричные схемы шифрования. Они предполагают наличие одного ключа, используемого как для шифрования, так и для расшифровки сообщений. Он хранится в тайне, поэтому такие схемы также называются схемами с закрытым ключом. Классический пример – алгоритм DES.
 
-Симметричные шифры в основном состоят из двух главных компонентов: шифры подстановки (перестановка символов/битов сообщения) и шифры замены (замена символов/битов по отдельности на другие по некоторому правилу) \cite{src8}. 
+Симметричные шифры в основном состоят из двух главных компонентов: шифры подстановки (перестановка символов/битов сообщения) и шифры замены (замена символов/битов по отдельности на другие по некоторому правилу)~\cite{src8}. 
 
 Симметричные шифры делятся на две категории: блочные и потоковые. Потоковые криптоалгоритмы обрабатывают данные побитово или побайтово. Блочные алгоритмы обрабатывают данные целыми группами битов (блоками), обычно размер блока кратен 64 и составляет от 64 до 256 бит.
 
 Симметричные шифры обладает рядом недостатков:
 \begin{itemize}
 	\item Ключ должен храниться в тайне обеими сторонами и передаваться только по \textit{защищенному} каналу (либо в зашифрованном виде). Это требует дополнительных ресурсов.
-	\item Шифровать могут только те, кто знает ключ. Это означает либо жесткие ограничения на количество шифрующих лиц, либо значительный риск компрометации ключа в случае ослабления этих ограничений (компрометация ключа – его раскрытие не криптографическим способом \cite{src15}).
+	\item Шифровать могут только те, кто знает ключ. Это означает либо жесткие ограничения на количество шифрующих лиц, либо значительный риск компрометации ключа в случае ослабления этих ограничений (компрометация ключа – его раскрытие не криптографическим способом~\cite{src15}).
 \end{itemize}
 
 \subsection{Асимметричная криптография} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
@@ -98,19 +98,19 @@
 
 Хэш-функция – функция, принимающая строку произвольной (или почти произвольной) длины, и преобразующую ее в строку фиксированной, обычно меньшей, длины. Полученная строка называется отпечатком (дайджестом) входной строки или ее хэш-кодом.
 
-Однонаправленная хэш-функция вычисляется только в одном направлении: легко вычислить значение дайджеста по входной строке, но крайне трудно создать прообраз, дайджест которого соответствует заданной строке \cite{src15}.
+Однонаправленная хэш-функция вычисляется только в одном направлении: легко вычислить значение дайджеста по входной строке, но крайне трудно создать прообраз, дайджест которого соответствует заданной строке~\cite{src15}.
 
 Криптографическая хэш-функция является открытой. Безопасность обеспечивается именно однонаправленностью функции. Одним из необходимых условий является изменение значения половины битов дайджеста при изменении в одном бите входа: невозможно путем сравнения близких входов обратить хэширующую функцию.
 
 Хэш-функции применяются при вычислении контрольных сумм для проверки подлинности файлов и транзакций: почти невозможно подобрать поддельный файл, отличный от настоящего, но с таким же дайджестом. При таком применении от функции требуется высокое быстродействие, т. к. файлы могут иметь значительный размер, а транзакции часто должны обрабатываться в реальном времени.
 
-Еще одно использование контрольных сумм – при использовании цифровой подписи можно подписывать не весь документ целиком, а только его контрольную сумму. Это значительно ускоряет работу с подписью и уменьшает потребление памяти при хранении подписей \cite{src15}.
+Еще одно использование контрольных сумм – при использовании цифровой подписи можно подписывать не весь документ целиком, а только его контрольную сумму. Это значительно ускоряет работу с подписью и уменьшает потребление памяти при хранении подписей~\cite{src15}.
 
 Также криптографические хэш-функции используются для хранения паролей. Такие хэш-функции называются Key Derivation Functions, KDF. В этом случае на носителе пароль не сохраняется, а хранится только его хэш, и каждый раз при вводе строки вычисляется ее хэш-код и сравнивается с хэшем пароля. Если произошло совпадение, значит, считаем, пароль введен верно. Для минимизации вероятности коллизии можно хранить два дайджеста от разных хэш-функций.
 
 Такой способ хранения паролей является в настоящее время наиболее распространенным, так как сам по себе обеспечивает дополнительных уровень защищенности: даже если злоумышленник получил доступ к хэшам, для восстановления по ним паролей ему потребуется много времени (или большие вычислительные мощности). При этом от хэширующей пароли функции требуется, чтобы она вычислялась долго: время вычисления порядка 100 мс незаметно при авторизации, однако значительно затрудняет подбор пароля методом грубой силы. Кроме того, по тем же соображениям желательно большое потребление оперативной памяти, это также усложняет перебор, особенно в многопоточном режиме. К их стойкости также предъявляются повышенные требования.
 
-Для дополнительного повышения защищенности хэшированных паролей используется \textit{соль}. Это случайная строка, добавляемая к шифруемым данным, она должна храниться вместе с хэшем. Она не позволит понять, что захэшированы одинаковые строки, так как они будут иметь разную соль. Благодаря этому, брутфорс одного пароля из базы не позволяет найти другие такие же пароли в базе \cite{src15}.
+Для дополнительного повышения защищенности хэшированных паролей используется \textit{соль}. Это случайная строка, добавляемая к шифруемым данным, она должна храниться вместе с хэшем. Она не позволит понять, что захэшированы одинаковые строки, так как они будут иметь разную соль. Благодаря этому, брутфорс одного пароля из базы не позволяет найти другие такие же пароли в базе~\cite{src15}.
 
 Итак, есть два вида криптографических хэш-функций:
 \begin{itemize}
@@ -122,13 +122,13 @@
 
 \subsection{Основные понятия} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
-Сэмюэл Грингард (Samuel Greengard) – журналист, специализируется на новых технологиях.  Директор по маркетингу во многих технологических и бизнес-изданиях, бывший президент Американского общества журналистов. В области IoT известен главным образом книгой \cite{src19}. Далее в этом разделе приводятся избранные положения этой работы.
+Сэмюэл Грингард (Samuel Greengard) – журналист, специализируется на новых технологиях.  Директор по маркетингу во многих технологических и бизнес-изданиях, бывший президент Американского общества журналистов. В области IoT известен главным образом книгой~\cite{src19}. Далее в этом разделе приводятся избранные положения этой работы.
 
 Подключаемые устройства – устройства, которые обмениваются данными по обычному интернет-соединению и получают дополнительные преимущества при подключении, например, через закрытую или частную сеть. Подключаемые устройства необязательно подсоединяются именно к Интернету вещей, но это происходит все чаще.
 
 Радиочастотная идентификация (RFID) – это основной инструмент, который позволяет устройствам стать подключаемыми. Эта технология автоматической идентификации основана на считывании или записи данных, хранящихся в RFID-метках. RFID-метки могут быть как активными (с собственным источником питания), так и пассивными (им не требуется источник питания). И те, и другие позволяют считывателям автоматически получать сигнал и данные с меток. При этом метка должна находиться не дальше определенного допустимого расстояния.
 
-Пассивные радиочастотные метки особенно востребованы благодаря низкой стоимости, долговечности и отсутствию необходимости в постоянном электропитании, они получают питание от ближайшего считывателя. Они могут быть встроены в наклейки для удобства использования или имплантированы под кожу (например, продукт VeriChip \cite{src16}). Стоимость определяется мощностью считывающего устройства. Чем больше его мощность, тем меньше требования к размеру и качеству метки, что, в свою очередь, определяет более низкую стоимость \cite{src17}. Уже в 2004 году некоторые метки стоили всего 5 центов \cite{src18}.
+Пассивные радиочастотные метки особенно востребованы благодаря низкой стоимости, долговечности и отсутствию необходимости в постоянном электропитании, они получают питание от ближайшего считывателя. Они могут быть встроены в наклейки для удобства использования или имплантированы под кожу (например, продукт VeriChip~\cite{src16}). Стоимость определяется мощностью считывающего устройства. Чем больше его мощность, тем меньше требования к размеру и качеству метки, что, в свою очередь, определяет более низкую стоимость~\cite{src17}. Уже в 2004 году некоторые метки стоили всего 5 центов~\cite{src18}.
 
 Промышленный Интернет – оборудование и аппаратура, оборудованные датчиками. Датчики позволяют получать данные с самых различных устройств унифицированным образом. Затем данные со считывающих устройств могут быть собраны и централизованно обработаны. 
 
@@ -140,7 +140,7 @@
 
 \subsection{Уровневая модель IoT и проблемы безопасности} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
-Стоит отметить хорошую работу \cite{src20}, посвященную обзору элементов сети IoT, ее «слоистой» архитектуры, а также актуальных проблем безопасности. Этот раздел написан в основном по материалам данной работы.
+Стоит отметить хорошую работу~\cite{src20}, посвященную обзору элементов сети IoT, ее «слоистой» архитектуры, а также актуальных проблем безопасности. Этот раздел написан в основном по материалам данной работы.
 
 Для идентификации устройств используются адреса IPv4 и IPv6, для именования может использоваться система ucode. Сбор информации осуществляется, например, с помощью RFID-меток, носимых устройства. Для сетевого взаимодействия – основного компонента IoT – используются такие технологии, как RFID, NFC, Bluetooth, Wi-Fi, LTE. Обработка информации включает в себя отбор информации и затем необходимые вычисления. Примеры аппаратных платформ: Arduino, Raspberry Pi, Intel Galileo. Среди ОС можно назвать TinyOS, LiteOS, Android. Для обеспечения общей семантики используются унифицированные модели представления данных RDF, OWL, EXI.
 
@@ -159,7 +159,7 @@
 	\item сенсорный уровень (perception layer, sensor layer). 	
 \end{itemize}
 
-Сенсорный уровень. На этом уровне осуществляется идентификация «вещей» и сбор поставляемых ими данных. Данные могут быть самыми разными, в зависимости от конкретной области применения: местоположение, температура, вибрация и другие. Этот уровень зачастую является основной целью злоумышленников. См, например, статью \cite{src21}. Основные атаки:
+Сенсорный уровень. На этом уровне осуществляется идентификация «вещей» и сбор поставляемых ими данных. Данные могут быть самыми разными, в зависимости от конкретной области применения: местоположение, температура, вибрация и другие. Этот уровень зачастую является основной целью злоумышленников. См, например, статью~\cite{src21}. Основные атаки:
 \begin{itemize}
 	\item Подслушивание (eavesdropping) – перехват информации. Для таких атак уязвимы данные, передаваемые в открытом или слабо зашифрованном виде.
 	\item Захват узла (node capture) – захват контроля над важным узлом передачи или временного хранения данных. Может привести к утечке сразу большого количества информации, в том числе ключей шифрования.
