--- a/PDF/my_folder/chapter4.tex
+++ b/PDF/my_folder/chapter4.tex
@@ -8,7 +8,7 @@
 
 Также используются некоторые библиотеки языков C и C++. Это модуль time.h для измерения времени, модуль windows.h для точного измерения времени, а также stdlib.h для получения псевдослучайных чисел и vector.h для удобной работы с массивами переменной длины.
 
-Тестированию подвергаются три реализации алгоритма AES на языке Си. Это две реализации, взятые из открытых источников (\cite{src72} и \cite{src73}), а также авторская реализация. Все три реализации были предварительно протестированы. Разработка авторской версии велась с упором на компактность кода и минимизацию «лишних» операций и потребления ОЗУ. На её основе может быть создана ассемблерная реализация. Причем тестировать ее можно с использованием того же окружения С/С++. В этом случае необходимо использовать массив чисел – опкодов процессорных команд.
+Тестированию подвергаются три реализации алгоритма AES на языке Си. Это две реализации, взятые из открытых источников (~\cite{src72,src73}), а также авторская реализация. Все три реализации были предварительно протестированы. Разработка авторской версии велась с упором на компактность кода и минимизацию «лишних» операций и потребления ОЗУ. На её основе может быть создана ассемблерная реализация. Причем тестировать ее можно с использованием того же окружения С/С++. В этом случае необходимо использовать массив чисел – опкодов процессорных команд.
 
 Порядок тестирования времени исполнения таков. Для каждого алгоритма производится n серий измерений времени шифрования. На каждой из серий производится m измерений для различных объемов $V_i$ входных данных, $i=1…m$. Под входными данными понимается набор случайно сгенерированных блоков (количеством $V_i$), которые последовательно подвергаются шифрованию, ключ для каждого блока свой, он тоже генерируется случайно. Для уменьшения влияния погрешности, каждое измерение выполняется t раз, время суммируется. Итого для каждого алгоритма имеется $n$ рядов по $m$ точек.
 
