--- a/PDF/my_folder/introduction.tex
+++ b/PDF/my_folder/introduction.tex
@@ -1,11 +1,11 @@
 \chapter*{Введение} % * не проставляет номер
 \addcontentsline{toc}{chapter}{Введение} % вносим в содержание
 
-В последние десятилетия сетевые технологии прочно вошли в жизнь человека. Изначально они были представлены локальными сетями, затем была создана сеть Интернет. В настоящее время одним из бурно развивающихся направлений сетевых технологий является интернет вещей (Internet of Things, IoT). Так, за период 2015-2018 гг. доля IoT-устройств среди всех устройств увеличилась с 27\% до 39\%, и, согласно прогнозу, достигнет 63\% к 2025 году \cite{src1}. 
+В последние десятилетия сетевые технологии прочно вошли в жизнь человека. Изначально они были представлены локальными сетями, затем была создана сеть Интернет. В настоящее время одним из бурно развивающихся направлений сетевых технологий является интернет вещей (Internet of Things, IoT). Так, за период 2015-2018 гг. доля IoT-устройств среди всех устройств увеличилась с 27\% до 39\%, и, согласно прогнозу, достигнет 63\% к 2025 году~\cite{src1}. 
 
-Интернет вещей – это вычислительная сеть физических предметов (устройств, «вещей»), оснащенных встроенной технологией для взаимодействия друг с другом или с внешней средой \cite{src2}.
+Интернет вещей – это вычислительная сеть физических предметов (устройств, «вещей»), оснащенных встроенной технологией для взаимодействия друг с другом или с внешней средой~\cite{src2}.
 
-\textbf{Актуальность исследования}. Одной из важных задач при проектировании IoT является обеспечение должного уровня безопасности передаваемых данных. Особенно это важно для медицинских устройств\cite{src3}. Уже сейчас правительства развитых стран начинают принимать законы, регламентирующие защиту IoT-устройств\cite{src4}\cite{src5}\cite{src6}. В то же время фактическая безопасность устройств интернета вещей оставляет желать лучшего. Так, согласно исследованию корпорации HP 2014-го года, 70\% устройств IoT передавали данные, в том числе конфиденциального характера, вообще без шифрования\cite{src7}! По этой причине изучение и развитие средств защиты IoT-устройств является актуальной задачей.
+\textbf{Актуальность исследования}. Одной из важных задач при проектировании IoT является обеспечение должного уровня безопасности передаваемых данных. Особенно это важно для медицинских устройств~\cite{src3}. Уже сейчас правительства развитых стран начинают принимать законы, регламентирующие защиту IoT-устройств~\cite{src4,src5,src6}. В то же время фактическая безопасность устройств интернета вещей оставляет желать лучшего. Так, согласно исследованию корпорации HP 2014-го года, 70\% устройств IoT передавали данные, в том числе конфиденциального характера, вообще без шифрования~\cite{src7}! По этой причине изучение и развитие средств защиты IoT-устройств является актуальной задачей.
 
 Безопасность устройств с ограниченными энергетическими ресурсами (а именно такими являются устройства интернета вещей) изучает раздел криптографии, называемый легковесной криптографией (lightweight cryptography, LWC). Также возможны термины «облегченная криптография», «малоресурсная криптография», «низкоэнергетическая криптография». Она рассматривает криптографические алгоритмы в контексте их требовательности к ресурсам устройства и количеству логических элементов, требуемых для реализации алгоритмов. Рассматриваемые ею алгоритмы называются алгоритмами легковесной криптографии (легковесными алгоритмами, LW-алгоритмами). LW-алгоритмы могут иметь программную или аппаратную реализацию.
 
