--- a/PDF/my_folder/chapter3.tex
+++ b/PDF/my_folder/chapter3.tex
@@ -8,7 +8,7 @@
 
 Теоретический анализ включает в себя оценку и сравнение их стойкости в зависимости от параметров (\textit{задача криптоанализа}), а также теоретическую оценку их производительности в зависимости от тех же параметров. Под параметрами понимается конкретная конфигурация: длина ключа, число раундов, в некоторых алгоритмах также существуют различные режимы запуска и свободные параметры. Также может (и должна!) быть исследована стойкость алгоритма в зависимости от конкретного входа и конкретного ключа (слабые ключи и т. д.). 
 
-Для определения криптостойкости легковесных шифров подходят такие же методы криптоанализа, как для шифров общего назначения. Они могут быть самыми различными: линейный криптоанализ, дифференциальный криптоанализ, атаки встречи посередине и многие другие. Они описаны в большом числе работ, например, в \cite{src53}\cite{src54}\cite{src55}\cite{src56}. Для теоретической оценки производительности можно применять обычные методы оценки времени работы алгоритма. Они описаны, например, в \cite{src57}.
+Для определения криптостойкости легковесных шифров подходят такие же методы криптоанализа, как для шифров общего назначения. Они могут быть самыми различными: линейный криптоанализ, дифференциальный криптоанализ, атаки встречи посередине и многие другие. Они описаны в большом числе работ, например, в~\cite{src53,src54,src55,src56}. Для теоретической оценки производительности можно применять обычные методы оценки времени работы алгоритма. Они описаны, например, в~\cite{src57}.
 
 В рамках тестирования реализаций алгоритмов определяют качество конкретных реализаций по таким характеристикам, как требуемая площадь микросхемы (GE-мера), фактическая производительность (производительность – число байт в секунду, плюс задержка (микро- или наносекунд)), а также энергопотребление (микроватт). Потребление ОЗУ обычно не требуется тестировать: оно легко определяется уже по псевдокоду алгоритма.
 
@@ -34,23 +34,23 @@
 
 Также при создании ассемблерной реализации следует учитывать предполагаемые аппаратные ограничения реализации. Они могут быть следующими:
 \begin{itemize}
-	\item уменьшенное количество регистров (по сравнению с ЦП ПК) \cite{src58};
-	\item иная архитектура, чем у ЦП ПК. В этом случае можно моделировать задержки с помощью пустых циклов \cite{src59}.
+	\item уменьшенное количество регистров (по сравнению с ЦП ПК)~\cite{src58};
+	\item иная архитектура, чем у ЦП ПК. В этом случае можно моделировать задержки с помощью пустых циклов~\cite{src59}.
 \end{itemize}
 
-Другой проблемой является различная скорость исполнения инструкций, т. е. задержка и пропускная способность процессора при исполнении данной инструкции. Процессоры различных производителей, линеек и поколений могут показывать различную производительность при исполнении одной и той же инструкции. Это касается стандартных ЦП для десктопных машин и ноутбуков, и уж тем более касается «кастомных» процессорных решений. Эта проблема не поддается простому решению. Можно пользоваться уже готовыми таблицами \cite{src60}, однако кастомные реализации нуждаются в отдельном тестировании для каждой используемой команды.
+Другой проблемой является различная скорость исполнения инструкций, т. е. задержка и пропускная способность процессора при исполнении данной инструкции. Процессоры различных производителей, линеек и поколений могут показывать различную производительность при исполнении одной и той же инструкции. Это касается стандартных ЦП для десктопных машин и ноутбуков, и уж тем более касается «кастомных» процессорных решений. Эта проблема не поддается простому решению. Можно пользоваться уже готовыми таблицами~\cite{src60}, однако кастомные реализации нуждаются в отдельном тестировании для каждой используемой команды.
 
-Еще одним неочевидным моментом является многопоточность. Ведь, даже если алгоритм запускается в однопоточном режиме, на его исполнение выделяется не 100\% процессорного времени. Значительная часть времени уходит на исполнение задач других приложений, прерываний ОС и системных прерываний. Для минимизации времени работы процессора над другими задачами следует по возможности отключить все другие приложения и службы перед началом тестирования. Можно засекать определенное время, которое затем умножить на долю q процессорного времени, выделяемого тестируемому процессу. Либо же можно сразу измерять процессорное время, например, как описано в статье \cite{src61}. Также следует отключить технологию Hyper-Threading \cite{src62}.
+Еще одним неочевидным моментом является многопоточность. Ведь, даже если алгоритм запускается в однопоточном режиме, на его исполнение выделяется не 100\% процессорного времени. Значительная часть времени уходит на исполнение задач других приложений, прерываний ОС и системных прерываний. Для минимизации времени работы процессора над другими задачами следует по возможности отключить все другие приложения и службы перед началом тестирования. Можно засекать определенное время, которое затем умножить на долю q процессорного времени, выделяемого тестируемому процессу. Либо же можно сразу измерять процессорное время, например, как описано в статье~\cite{src61}. Также следует отключить технологию Hyper-Threading~\cite{src62}.
 
-Еще одним возможным подходом является искусственное понижение рабочей частоты процессора. Однако этот способ имеет свои нюансы. Так, это можно сделать на уровне ОС или утилит, и в этом случае появится дополнительная активная служба, которая будет требовать отдельных ресурсов ЦП, возможно не в постоянном количестве. Также это можно выполнить на уровне BIOS \cite{src63}. Этот способ является более предпочтительным, так как не влечет появления новых служб, нагружающих ЦП. Однако этот способ (как и предыдущий) необходимо использовать с осторожностью, так как при понижении частоты ЦП некоторые службы могут отключаться. Это означает необходимость перерасчета доли процессорного времени, выделяемого тест-модулю, для каждого значения тактовой частоты ЦП.
+Еще одним возможным подходом является искусственное понижение рабочей частоты процессора. Однако этот способ имеет свои нюансы. Так, это можно сделать на уровне ОС или утилит, и в этом случае появится дополнительная активная служба, которая будет требовать отдельных ресурсов ЦП, возможно не в постоянном количестве. Также это можно выполнить на уровне BIOS~\cite{src63}. Этот способ является более предпочтительным, так как не влечет появления новых служб, нагружающих ЦП. Однако этот способ (как и предыдущий) необходимо использовать с осторожностью, так как при понижении частоты ЦП некоторые службы могут отключаться. Это означает необходимость перерасчета доли процессорного времени, выделяемого тест-модулю, для каждого значения тактовой частоты ЦП.
 
 Могут быть предложены два способа проведения измерения производительности алгоритмов. Можно либо рассчитать ее через время исполнения отдельных операций (частота процессора известна, задержки и число тактов на исполнение для каждой операции известны), либо же измерить напрямую. По мнению автора, первый подход даст очень низкую точность, либо потребует значительного тестирования или глубоких знаний в устройстве конкретного ЦП. Это связано с тем, что в процессоре имеется масса оптимизаций, которые между собой взаимодействуют. В качестве примера: последовательность команд xor rax rbx;xor rcx rdx займет время, равное не удвоенному времени исполнения xor’а, а лишь чуть дольше одного xor’а. Это связано с внутренней параллелизацией работы процессора. Большое количество разных оптимизаций не позволяет точно определить, как поведут себя операции в конкретной взаимной конфигурации, т. е. в конкретном алгоритме. Впрочем, это тема для отдельного исследования о предсказуемости времени исполнения последовательности процессорных команд.
 
-В данной работе предлагается определять время работы алгоритма с помощью прямого тестирования времени. Случайную (статистическую) погрешность данного измерения можно уменьшить следующим способом. Произвести несколько серий измерений времени шифрования для различного объема шифруемых данных. Чем больше серий и измерений внутри серии, тем лучше. В результате точки на графике зависимости времени шифрования от объема шифруемых данных будут расположены примерно на одной прямой. После чего с помощью метода наименьших квадратов можно восстановить уравнение этой прямой вида y=kx+b. Коэффициент k будет пропускной способностью, а b – задержкой данного алгоритма. Подробнее данный классический метод описан, например, в пособии \cite{src64}.
+В данной работе предлагается определять время работы алгоритма с помощью прямого тестирования времени. Случайную (статистическую) погрешность данного измерения можно уменьшить следующим способом. Произвести несколько серий измерений времени шифрования для различного объема шифруемых данных. Чем больше серий и измерений внутри серии, тем лучше. В результате точки на графике зависимости времени шифрования от объема шифруемых данных будут расположены примерно на одной прямой. После чего с помощью метода наименьших квадратов можно восстановить уравнение этой прямой вида y=kx+b. Коэффициент k будет пропускной способностью, а b – задержкой данного алгоритма. Подробнее данный классический метод описан, например, в пособии~\cite{src64}.
 
 \section{Оценка энергопотребления на ПК} \label{ch3:sec3}
 
-Оценка энергопотребления реализации алгоритма на ПК является методологически более трудной задачей, чем оценка производительности. Основная причина в том, что на компьютере всегда в многозадачном режиме исполняются различные службы, некоторые из которых потребляют разное количество энергии в разное время. Кроме того, порядок работы служб может зависеть от загрузки ЦП, и даже от энергопотребления (например, ACPI). В результате сложно отличить колебания энергопотребления служб от работы алгоритма. Экспериментальная оценка влияния служб на энергопотребление проведена в работе \cite{src65}. Единственный способ минимизировать влияние служб на энергопотребление – отключить их.
+Оценка энергопотребления реализации алгоритма на ПК является методологически более трудной задачей, чем оценка производительности. Основная причина в том, что на компьютере всегда в многозадачном режиме исполняются различные службы, некоторые из которых потребляют разное количество энергии в разное время. Кроме того, порядок работы служб может зависеть от загрузки ЦП, и даже от энергопотребления (например, ACPI). В результате сложно отличить колебания энергопотребления служб от работы алгоритма. Экспериментальная оценка влияния служб на энергопотребление проведена в работе~\cite{src65}. Единственный способ минимизировать влияние служб на энергопотребление – отключить их.
 
 Далее используются следующие обозначения: $P$ – мощность энергопотребления (ватт), $E$ – потребленная энергия (ватт-час).
 
@@ -62,7 +62,7 @@
 	\item Энергопотребление ЦП $P_{cpu}$. Оно в разные моменты разное: при исполнении тестируемого процесса имеет величину $P_{test}$ (собственно, ее и следует измерить), при исполнении служебных (не относящихся к процессу тестирования) процессов – усредненную величину $P_{serv}$.
 \end{enumerate} 
 
-Существует два способа измерения энергопотребления процессора: измерить энергопотребление всего ПК (на уровне блока питания) и затем вычесть $P_{const}$, или же напрямую измерить энергопотребление процессора \cite{src66} \cite{src67} (учитывается потребление на входе системной платы по разъему питания процессора \cite{src68}), при этом следует вычесть энергопотребление регулятора напряжения. Второй подход предпочтителен.
+Существует два способа измерения энергопотребления процессора: измерить энергопотребление всего ПК (на уровне блока питания) и затем вычесть $P_{const}$, или же напрямую измерить энергопотребление процессора~\cite{src66,src67} (учитывается потребление на входе системной платы по разъему питания процессора~\cite{src68}), при этом следует вычесть энергопотребление регулятора напряжения. Второй подход предпочтителен.
 
 После того, как энергопотребление процессора найдено, требуется найти $P_{test}$, т. е. каким было бы энергопотребление, если бы выполнялся только тестируемый процесс. Если $q$ – доля процессорного времени, выделяемого тестируемому процессу, то усредненное по времени энергопотребление ЦП равно
 \begin{equation}
@@ -74,13 +74,13 @@ P_{cpu} = q P_{test} + (1 - q)P_{serv}.
 P_{test} = 1/q ( P_{cpu} - (1 - q) P_{serv}).
 \end{equation}
 
-Величину $P_{serv}$ можно найти как энергопотребление ЦП в состоянии простоя, разделенное на долю его загрузки в этом режиме (утилиты для определения загрузки приводятся в \cite{src69} ). Способ оценки величины q описан в предыдущем разделе (оценка производительности).
+Величину $P_{serv}$ можно найти как энергопотребление ЦП в состоянии простоя, разделенное на долю его загрузки в этом режиме (утилиты для определения загрузки приводятся в~\cite{src69} ). Способ оценки величины q описан в предыдущем разделе (оценка производительности).
 
-Далее описывается измерение энергопотребление для конкретного алгоритма. По этому вопросу существует работа \cite{src71}. На ее основе предлагается следующий способ.
+Далее описывается измерение энергопотребление для конкретного алгоритма. По этому вопросу существует работа~\cite{src71}. На ее основе предлагается следующий способ.
 
 Измеряется $P_{bitshift}$, $P_{xor}$, … -- энергопотребление ПК при исполнении каждой из используемых в алгоритме инструкций: побитовый сдвиг, XOR и т. д. Каждый сеанс снятия этих данных следует проводить достаточно долго (хотя бы 5 минут), чтобы учесть колебания энергопотребления служб. После проведения достаточного числа таких сеансов можно узнать величину энергопотребления (микроватт) на исполнение каждой из инструкций, а также погрешность этой величины.
 
-Измеряется частота процессора F. Это можно сделать, например, с помощью утилиты CPU-Z. По таблице (например, \cite{src60}) определяется n – число тактов на инструкцию (пропускная способность ЦП для данной инструкции). Откуда энергия, затрачиваемая на одну операцию, равна
+Измеряется частота процессора F. Это можно сделать, например, с помощью утилиты CPU-Z. По таблице (например,~\cite{src60}) определяется n – число тактов на инструкцию (пропускная способность ЦП для данной инструкции). Откуда энергия, затрачиваемая на одну операцию, равна
 \begin{equation}
 E_{op} = \frac{ nP_{op} }{ F }.
 \end{equation}
