--- a/PDF/my_folder/title.tex
+++ b/PDF/my_folder/title.tex
@@ -87,7 +87,7 @@
 
 	Руководитель 		  &    &             \\
 	\SupervisorJob,		  &    &             \\
-	\SupervisorDegree, \SupervisorTitle 	  &    & \Supervisor \\[\mfloatsep]
+	\SupervisorDegree 	  &    & \Supervisor \\[\mfloatsep]
 	
 %	Консультант\footnote{Оформляется по решению руководителя ОП или подразделения. Только 1 категория: <<Консультант>>. В исключительных случаях можно указать <<Научный консультант>> (должен иметь степень). Без печати и заверения подписи.}		  &    & 			 \\
 %	\ConsultantExtraDegree 	  &    & \ConsultantExtra\\[\mfloatsep]
